--- a/responsiveWebDesign/Project2/contact-us.html
+++ b/responsiveWebDesign/Project2/contact-us.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Roar Cycle - Bike repairs in Dublin</title>
+    <title>Roar Cycle - Contact Us</title>
+    <meta name="description" content="Contact Details for Roar -57 Moyglare Abbey, Dublin, Phone +353 4564896">
     <!-- This is Eric Meyers CSS reset -->
     <link rel="stylesheet" href="css/css-reset.css">
     <!-- This is my own stylesheet -->
@@ -16,7 +17,7 @@
 <body>
     <div class="container">
         <header>
-            <img src="images/logo-roar-bikes.svg" alt="Roar Cycle logo">
+            <a href="index.html"><img src="images/logo-roar-bikes.svg" alt="Roar Cycle logo" ></a>
             <nav>
                 <div class="navbutton">
                     <a href="#" >Book Online</a>
@@ -35,18 +36,55 @@
             </nav>
         </header>
         
-        <main>
-            <div class="herobox1">
-                <h1>Mobile bike repairs.</h1>
-                <p>Many people have difficulty getting their bikes to a bike shop. We call to your office or home anywhere in greater Dublin.</p>
-                <p>Fast, convenient bike servicing with up-front pricing. All without the hassle of taking your bike into a shop.</p>
-                <a href="#" class="myButton"> Book Online</a>
-            </div>
-            <div class="herobox2">
-                <img src="images/image-bike-repair-service-a.jpg" alt="person servicing a bike in Dublin">
-            </div>
-        </main>
+        <!--Main section -->
+        <div class="main2">
+            <h1>Contact Us</h1>
+            <p>Do you have any questions? Please do not hesitate to contact us directly. Our team will come back to you within a matter of hours to help you.</p>
 
+            <form action="#" method = "post">
+                <div class="inputwrapper">
+                    <label for="name" class="newline">First Name</label>
+                    <input type="text" name="name" id="name" placeholder="First Name">
+                </div>
+
+                <div class="inputwrapper">
+                    <label for="email" class="newline">Email</label>
+                    <input type="text" name="email" id="email" placeholder="Enter your mail">
+                </div>
+
+                <div class="inputwrapper">
+                    <textarea name="message" id="message" cols="100" rows="5" placeholder="Let us know what you think"></textarea>
+                </div>
+
+                <div class="inputwrapper">
+                    <input type="checkbox" name="email-sub" id="email-sub" value="yes-sign-me-up">
+                    <label for="email-sub">Sign Up for Email Newsletter</label>
+                </div>
+
+                <p>How would you like to be contacted?</p>
+                <div class="inputwrapper">
+                    <input type="radio" name="contact-preference" id="phone" value="phone">
+                    <label for="phone" class="margin-right-a" >Phone</label>
+                    <input type="radio" name="contact-preference" id="emailRadio" value="email">
+                    <label for="email">Email</label>
+                </div>
+
+                <div class="inputwrapper">
+                    <select name="county" id="county">
+                        <option value="Not-Chosen selected">Choose County</option>
+                        <option value="Limerick">Limerick</option>
+                        <option value="Galway">Galway</option>
+                        <option value="Dublin">Dublin</option>
+                    </select>
+
+                </div>
+
+
+                <div class="inputwrapper">
+                    <input type="submit" value="Fire Away" class="myButton">
+                </div>
+            </form>
+        </div>
         <!--Cards Section-->
         <div class="cards">
             <div class="card1">
