--- a/bootstrap_4/bootstrap_sandbox_starter/2_2_basic_typography.html
+++ b/bootstrap_4/bootstrap_sandbox_starter/2_2_basic_typography.html
@@ -134,18 +134,18 @@
 
     <!-- BLOCKQUOTES -->
     <blockquote>
-      <p>This is a blockquote</p>
+      <p class="blockquote">This is a blockquote</p>
     </blockquote>
 
     <!-- BLOCKQUOTE RIGHT ALIGNED -->
     <blockquote>
-      <p>This is a blockquote aligned right</p>
+      <p class="blockquote text-right">This is a blockquote aligned right</p>
     </blockquote>
 
     <!-- BLOCKQUOTE WITH FOOTER -->
-    <blockquote>
+    <blockquote class="blockquote">
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-      <footer>Someone famous in
+      <footer class="blockquote-footer text-right">Someone famous in
         <cite title="Source Title">Source Title</cite>
       </footer>
     </blockquote>
@@ -154,7 +154,7 @@
     <br>
 
     <!-- TEXT TRUNCATE -->
-    <div>
+    <div class="text-truncate">
       Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda repellat nobis sunt qui consequatur architecto veritatis,
       iure odit, debitis pariatur perspiciatis? Asperiores facere veniam, totam ullam dignissimos voluptate atque! Eos, animi
       quos. Sint magni nulla provident et consequatur officia tempora!
@@ -164,7 +164,7 @@
     <br>
 
     <!-- LISTS -->
-    <ul>
+    <ul class="list-unstyled">
       <li>Lorem ipsum dolor sit amet.</li>
       <li>Lorem ipsum dolor sit amet.</li>
       <li>Lorem ipsum dolor sit amet.</li>
@@ -172,10 +172,10 @@
     </ul>
 
     <!-- INLINE LIST -->
-    <ul>
-      <li>Lorem ipsum</li>
-      <li>Lorem ipsum </li>
-      <li>Lorem ipsum </li>
+    <ul class="list-inline">
+      <li class="list-inline-item">Lorem ipsum</li>
+      <li class="list-inline-item">Lorem ipsum </li>
+      <li class="list-inline-item">Lorem ipsum </li>
     </ul>
   </div>
 
