--- a/bootstrap_4/bootstrap_sandbox_starter/2_8_breakpoints.html
+++ b/bootstrap_4/bootstrap_sandbox_starter/2_8_breakpoints.html
@@ -12,37 +12,57 @@
     <style>
         /* Small devices (landscape phones) */
 
-        @media () {}
+        @media (min-width:576px) {
+            body {
+                background-color: red;
+            }
+        }
 
         /* Medium devices (tablets) */
 
-        @media () {}
+        @media (min-width:768px) {
+            body {
+                background-color: blue;
+            }
+        }
 
         /* Large devices (desktops) */
 
-        @media () {}
+        @media (min-width:992px) {
+            body {
+                background-color: green;
+            }
+        }
 
         /* Extra large devices (large desktops) */
 
-        @media () {}
+        @media (min-width: 1200px) {
+            body {
+                background-color:yellow;
+            }
+        }
 
         /* The given screen size or smaller */
 
         /* Extra small devices (portrait phones)*/
 
-        @media () {}
+        @media (max-width:575px) {
+            body {
+                background-color: coral;
+            }
+        }
 
         /* Small devices (landscape phones)*/
 
-        @media () {}
+        @media (max-width: 767px) {}
 
         /* Medium devices (tablets)*/
 
-        @media () {}
+        @media (max-width: 991px) {}
 
         /* Large devices (desktops)*/
 
-        @media () {}
+        @media (max-width:1119px) {}
     </style>
 </head>
 
