--- a/bootstrap_4/bootstrap_sandbox_starter/3_10_media_object.html
+++ b/bootstrap_4/bootstrap_sandbox_starter/3_10_media_object.html
@@ -88,9 +88,9 @@
         <!--#####################START HERE######################-->
 
         <!-- MEDIA OBJECT -->
-        <div>
-            <img src="https://source.unsplash.com/random/90x90">
-            <div>
+        <div class="media">
+            <img class = " m4-3" src="https://source.unsplash.com/random/90x90">
+            <div class="media-body">
                 <h5>Media heading</h5>
                 Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in
                 vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue
@@ -102,7 +102,7 @@
         <br>
 
         <!-- NESTING MEDIA OBJECTS -->
-        <div>
+        <div class="media">
             <img src="https://source.unsplash.com/random/90x91">
             <div>
                 <h5>Media heading</h5>
