--- a/bootstrap_4/bootstrap_sandbox_starter/3_2_buttons.html
+++ b/bootstrap_4/bootstrap_sandbox_starter/3_2_buttons.html
@@ -90,59 +90,61 @@
         <!--################START HERE################-->
 
         <!-- BUTTONS -->
-        <button type="button">Primary</button>
-        <button type="button">Secondary</button>
-        <button type="button">Success</button>
-        <button type="button">Info</button>
-        <button type="button">Warning</button>
-        <button type="button">Danger</button>
-        <button type="button">Light</button>
-        <button type="button">Dark</button>
-        <button type="button">Link</button>
+        <button class = "btn btn-primary" type="button" >Primary</button>
+        <button class = "btn btn-secondary"  type="button">Secondary</button>
+        <button class = "btn btn-success" type="button">Success</button>
+        <button class = "btn btn-info" type="button">Info</button>
+        <button class = "btn btn-warning" type="button">Warning</button>
+        <button class = "btn btn-danger" type="button">Danger</button>
+        <button class = "btn btn-light" type="button">Light</button>
+        <button class = "btn btn-dark" type="button">Dark</button>
+        <button class = "btn btn-link" type="button">Link</button>
 
         <br>
         <br>
 
         <!-- BUTTON TAGS/TYPES -->
-        <a href="#" role="button">Link</a>
-        <button type="submit">Button</button>
-        <input type="button" value="Input">
-        <input type="submit" value="Submit">
-        <input type="reset" value="Reset">
+        <a href="#" class="btn btn-primary" role="button">Link</a>
+        <button type="submit" class="btn">Button</button>
+        <input type="button" class="btn" value="Input">
+        <input type="submit"  class= "btn" value="Submit">
+        <input type="reset" class="btn" value="Reset">
 
         <br>
         <br>
 
         <!-- OUTLINE BUTTONS -->
-        <button type="button">Primary Outline</button>
-        <button type="button">Secondary Outline</button>
-        <button type="button">Success Outline</button>
-        <button type="button">Info Outline</button>
-        <button type="button">Warning Outline</button>
-        <button type="button">Danger Outline</button>
-        <button type="button">Light Outline</button>
-        <button type="button">Dark Outline</button>
+        <button class = "btn btn-outline-primary" type="button">Primary</button>
+        <button class = "btn btn-outline-secondary"  type="button">Secondary</button>
+        <button class = "btn btn-outline-success" type="button">Success</button>
+        <button class = "btn btn-outline-info" type="button">Info</button>
+        <button class = "btn btn-outline-warning" type="button">Warning</button>
+        <button class = "btn btn-outline-danger" type="button">Danger</button>
+        <button class = "btn btn-outline-light" type="button">Light</button>
+        <button class = "btn btn-outline-dark" type="button">Dark</button>
+        <button class = "btn btn-outline-link" type="button">Link</button>
+
 
         <br>
         <br>
 
         <!-- BUTTON SIZES -->
-        <button type="button">
+        <button type="button" class="btn btn-primary btn-lg">
             <i class="fa fa-user"></i> Large button</button>
-        <button type="button">Small button</button>
+        <button type="button" class="btn btn-sm">Small button</button>
         <br>
         <br>
-        <button type="button">Block level button</button>
+        <button type="button" class="btn btn-dark btn-block">Block level button</button>
 
         <br>
         <br>
 
         <!-- STATES -->
-        <button type="button">Regular Button</button>
-        <button type="button">Active Button</button>
-        <button type="button">Disabled Button</button>
+        <button type="button" class="btn btn-primary">Regular Button</button>
+        <button type="button" class="btn btn-primary active">Active Button</button>
+        <button type="button" class="btn btn-primary disabled">Disabled Button</button>
 
-        <button type="button">
+        <button type="button" class="btn btn-primary" data-toggle="button">
             Toggle State
         </button>
 
@@ -150,29 +152,29 @@
         <br>
 
         <!-- BUTTON GROUPS -->
-        <div>
-            <button type="button">Left</button>
-            <button type="button">Middle</button>
-            <button type="button">Right</button>
+        <div class="btn-group">
+            <button type="button" class="btn btn-primary">Left</button>
+            <button type="button" class="btn btn-secondary">Middle</button>
+            <button type="button" class="btn btn-primary">Right</button>
         </div>
 
-        <br></br>
+        <br><br>
 
         <!-- BUTTON TOOLBAR -->
-        <div>
-            <div>
-                <button type="button">1</button>
-                <button type="button">2</button>
-                <button type="button">3</button>
-                <button type="button">4</button>
+        <div class="btn-toolbar">
+            <div class="btn-group mr-2">
+                <button class="btn btn-primary" type="button">1</button>
+                <button class="btn btn-primary" type="button">2</button>
+                <button class="btn btn-primary" type="button">3</button>
+                <button class="btn btn-primary" type="button">4</button>
             </div>
-            <div>
-                <button type="button">5</button>
-                <button type="button">6</button>
-                <button type="button">7</button>
+            <div class="btn-group mr-2"> 
+                <button class="btn btn-primary" type="button">5</button>
+                <button class="btn btn-primary" type="button">6</button>
+                <button class="btn btn-primary" type="button">7</button>
             </div>
-            <div>
-                <button type="button">8</button>
+            <div class="btn-group">
+                <button class="btn btn-primary" type="button">8</button>
             </div>
         </div>
 
@@ -180,24 +182,24 @@
         <br>
 
         <!-- VERTICAL GROUP -->
-        <div>
-            <button type="button">Left</button>
-            <button type="button">Middle</button>
-            <button type="button">Right</button>
+        <div class="btn-group-vertical">
+            <button type="button" class="btn btn-primary">Top</button>
+            <button type="button" class="btn btn-primary">Middle</button>
+            <button type="button" class="btn btn-primary">Bottom</button>
         </div>
 
         <br>
         <br>
 
         <!-- BUTTON DROPDOWNS -->
-        <div>
-            <button type="button">
+        <div class="dropdown">
+            <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
                 My Dropdown
             </button>
-            <div>
-                <a href="#">Link One</a>
-                <a href="#">Link Two</a>
-                <a href="#">Link Three</a>
+            <div class="dropdown-menu">
+                <a class="dropdown-item" href="#">Link One</a>
+                <a class="dropdown-item" href="#">Link Two</a>
+                <a class="dropdown-item" href="#">Link Three</a>
             </div>
         </div>
 
@@ -205,17 +207,17 @@
         <br>
 
         <!-- SPLIT DROPDOWNS -->
-        <div>
-            <button type="button">My Button</button>
-            <button type="button">
+        <div class="btn-group">
+            <button type="button" class="btn btn-primary">My Button</button>
+            <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown">
                 <span>Toggle Dropdown</span>
             </button>
             <div>
-                <a href="#">Link One</a>
-                <a href="#">Link Two</a>
-                <a href="#">Link Three</a>
-                <div></div>
-                <a href="#">Link Four</a>
+                <a class="dropdown-item" href="#">Link One</a>
+                <a class="dropdown-item" href="#">Link Two</a>
+                <a class="dropdown-item" href="#">Link Three</a>
+                <div class="dropdown-divider"></div>
+                <a href="#" class="dropdown-item">Link Four</a>
             </div>
         </div>
 
