--- a/bootstrap_4/bootstrap_sandbox_starter/5_3_collapse.html
+++ b/bootstrap_4/bootstrap_sandbox_starter/5_3_collapse.html
@@ -88,11 +88,11 @@
     <!--#####################START HERE###################-->
 
     <!-- BUTTON WITH COLLAPSE -->
-    <button>Read More</button>
+    <button class="btn btn-primary d-block mb-4" data-toggle="collapse" data-target="#collapse-btn-1">Read More</button>
 
-    <div>
-      <div>
-        <div>
+    <div class="collapse mb-5" id="collapse-btn-1">
+      <div class="card">
+        <div class="card-body">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit eius libero quisquam nobis explicabo vel non necessitatibus
           ipsum doloribus cupiditate voluptate recusandae quo autem error debitis, sed, minima repellendus commodi.
         </div>
@@ -100,18 +100,19 @@
     </div>
 
     <!-- ACCORDION -->
-    <div>
-      <div>
-        <div>
+    <div id="accordion">
+
+      <div class="card">
+        <div class="card-header">
           <h5>
-            <a>
+            <a href="#collapse1" data-parent="#accordion" data-toggle="collapse">
               Collapse One
             </a>
           </h5>
         </div>
 
-        <div>
-          <div>
+        <div id="collapse1" class="collapse show">
+          <div class="card-body">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis ea iste a doloremque, cumque, debitis eum vel ipsum architecto
             aut, recusandae totam ullam aperiam. Nesciunt expedita officiis animi quam corporis optio inventore facilis sint
             et nulla in, repellat debitis dolor at nisi quo, unde temporibus. Quos nisi nostrum officia, illo.
@@ -119,17 +120,17 @@
         </div>
       </div>
 
-      <div>
-        <div>
+      <div class="card">
+        <div class="card-header">
           <h5>
-            <a>
+            <a href="#collapse2" data-parent="#accordion" data-toggle="collapse">
               Collapse Two
             </a>
           </h5>
         </div>
 
-        <div>
-          <div>
+        <div id="collapse2" class="collapse">
+          <div class="card-body">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis ea iste a doloremque, cumque, debitis eum vel ipsum architecto
             aut, recusandae totam ullam aperiam. Nesciunt expedita officiis animi quam corporis optio inventore facilis sint
             et nulla in, repellat debitis dolor at nisi quo, unde temporibus. Quos nisi nostrum officia, illo.
@@ -137,24 +138,26 @@
         </div>
       </div>
 
-      <div>
-        <div>
+      <div class="card">
+        <div class="card-header">
           <h5>
-            <a>
+            <a href="#collapse3" data-parent="#accordion" data-toggle="collapse">
               Collapse Three
             </a>
           </h5>
         </div>
 
-        <div>
-          <div>
+        <div id="collapse3" class="collapse">
+          <div class="card-body">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis ea iste a doloremque, cumque, debitis eum vel ipsum architecto
             aut, recusandae totam ullam aperiam. Nesciunt expedita officiis animi quam corporis optio inventore facilis sint
             et nulla in, repellat debitis dolor at nisi quo, unde temporibus. Quos nisi nostrum officia, illo.
           </div>
         </div>
       </div>
+      
     </div>
+
   </div>
 
   <div style="margin-top:500px;"></div>
