--- a/bootstrap_4/bootstrap_sandbox_starter/5_4_tooltips.html
+++ b/bootstrap_4/bootstrap_sandbox_starter/5_4_tooltips.html
@@ -88,29 +88,29 @@
     <!--###################START HERE######################-->
 
     <!-- TOOLTIPS -->
-    <button class="btn btn-primary">Tooltip On Top</button>
-    <button class="btn btn-success">Tooltip On Right</button>
-    <button class="btn btn-warning">Tooltip On Bottom</button>
-    <button class="btn btn-danger">Tooltip On Left</button>
+    <button class="btn btn-primary" data-toggle="tooltip" data-placement="top" title="Tooltip on top">Tooltip On Top</button>
+    <button class="btn btn-success" data-toggle="tooltip" data-placement="right" title="Tooltip on right">Tooltip On Right</button>
+    <button class="btn btn-warning" data-toggle="tooltip" data-placement="bottom" title="Tooltip on bottom">Tooltip On Bottom</button>
+    <button class="btn btn-danger" data-toggle="tooltip" data-placement="left" title="Tooltip on left">Tooltip On Left</button>
 
     <br>
     <br>
 
     <!-- TOOLTIPS WITH HTML -->
-    <button class="btn btn-primary">Tooltip On With HTML</button>
+    <button id="hello" class="btn btn-primary" data-toggle="tooltip" data-placement="top" data-html="true" title="<h3>Hello</h3><p>Kush & Bhavin sir!</p>">Tooltip On With HTML</button>
 
     <hr>
 
     <!-- TRIGGER WITH JS -->
-    <button class="btn btn-secondary">
+    <button class="btn btn-secondary" onclick="showTooltip()">
       Show Tooltip
     </button>
 
-    <button class="btn btn-secondary">
+    <button class="btn btn-secondary" onclick="hideTooltip()">
       Hide Tooltip
     </button>
 
-    <button class="btn btn-secondary">
+    <button class="btn btn-secondary" onclick="toggleTooltip()">
       Toggle Tooltip
     </button>
 
@@ -125,7 +125,37 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
     crossorigin="anonymous"></script>
   <script>
+    // Init tooltips
+    $('[data-toggle="tooltip"]').tooltip();
 
+    function showTooltip() {
+      $('#hello').tooltip('show');
+    }
+
+    function hideTooltip() {
+      $('#hello').tooltip('hide');
+    }
+
+    function toggleTooltip() {
+      $('#hello').tooltip('toggle');
+    }
+
+    // Tooltip Events
+    $('#hello').on('show.bs.tooltip', function () {
+      console.log('Tooltip Show');
+    });
+
+    $('#hello').on('shown.bs.tooltip', function () {
+      console.log('Tooltip Shown');
+    });
+
+    $('#hello').on('hide.bs.tooltip', function () {
+      console.log('Tooltip Hide');
+    });
+
+    $('#hello').on('hidden.bs.tooltip', function () {
+      console.log('Tooltip Hidden');
+    });
   </script>
 </body>
 
