--- a/bootstrap_4/side_project_e_commerce/index.html
+++ b/bootstrap_4/side_project_e_commerce/index.html
@@ -29,13 +29,13 @@
         </form>
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Orders</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#"> <i class="fa fa-shopping-cart" aria-hidden="true"></i> Cart</a>
+            <a class="nav-link" href="cart.html"> <i class="fa fa-shopping-cart" aria-hidden="true"></i> Cart</a>
           </li>
         </ul>
       </div>
