--- a/javascript/todo-app/index.html
+++ b/javascript/todo-app/index.html
@@ -10,14 +10,19 @@
     <h2>This app is created by Parth Panchal</h2>
     <br><br>
     <input type="text" id = "search-text" placeholder="Search todos">
-    <input type="text" id = "new-todo-text" placeholder="enter something to do">
-    <button id="add-todo">Add Todo</button>
+    <input type="checkbox" name="hideCompleted" id="hide-completed">
+    <label for="hideCompleted"> Click to hide the completed todos!</label>
     <div id="todos">
 
     </div>
-    
+    <form id="new-todo-form">
+        <input type="text" name="newTodo" placeholder="enter something to do">
+        <button>Add Todo</button>
+    </form>
 
     <!--SCRIPTS-->
+    <script src="js/uuidv4.js"></script>
+    <script src="js/todos-functions.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
